<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/image_rl"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="20dp"
        android:background="@drawable/rounded_bottom_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:tint="#000000"
            android:src="@drawable/backarrow" />

        <ImageView
            android:id="@+id/like_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/heart" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:src="@drawable/img_watch" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/inner_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_rl">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tudor_black_bay"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/price"
            android:textColor="@color/color_red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:text="@string/reference_no"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_ref"
            android:layout_marginVertical="@dimen/standard_margin"
            android:text="@string/item_description"
            android:textColor="#757575" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/add_to_bag"
            android:layout_below="@id/item_description">

            <ImageView
                android:id="@+id/guarantee"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/security"
                android:tint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guarantee_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/guarantee"
                android:text="@string/year_guarantee"
                android:textColor="#757575"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guarantee" />

            <ImageView
                android:id="@+id/automatic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/automatic"
                android:tint="#757575"
                app:layout_constraintEnd_toStartOf="@id/steel_case"
                app:layout_constraintStart_toEndOf="@id/guarantee"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/automatic_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/automatic"
                android:text="@string/automatic"
                android:textColor="#757575"
                android:textSize="12dp"
                app:layout_constraintEnd_toStartOf="@id/steel_case_txt"
                app:layout_constraintStart_toEndOf="@id/guarantee_txt"
                app:layout_constraintTop_toBottomOf="@id/automatic" />

            <ImageView
                android:id="@+id/steel_case"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/watch"
                android:tint="#757575"
                app:layout_constraintEnd_toStartOf="@id/waterproof"
                app:layout_constraintStart_toEndOf="@id/automatic"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/steel_case_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steel_case"
                android:text="@string/steel_case"
                android:textColor="#757575"
                android:textSize="12dp"
                app:layout_constraintEnd_toStartOf="@id/waterproof_txt"
                app:layout_constraintStart_toEndOf="@id/automatic_txt"
                app:layout_constraintTop_toBottomOf="@id/steel_case" />

            <ImageView
                android:id="@+id/waterproof"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/umbrella"
                android:tint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/steel_case"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/waterproof_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/waterproof"
                android:text="@string/waterproof"
                android:textColor="#757575"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/steel_case"
                app:layout_constraintTop_toBottomOf="@id/waterproof" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/add_to_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_button"
            android:text="@string/add_to_bag"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>